--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
                 <version>3.9.1.2184</version>
             </plugin>
         </plugins>
+        <finalName>devops-ci-cd</finalName>
     </build>
 
 </project>
